--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "./server.js",
     "scripts": {
         "start": "nodemon ./server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest --detectOpenHandles"
     },
     "author": "",
     "license": "ISC",
@@ -16,5 +16,9 @@
         "nodemon": "^2.0.12",
         "pg": "^8.7.1",
         "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "jest": "^27.0.6",
+        "supertest": "^6.1.4"
     }
 }
