--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,9 @@ resources:
 
 variables:
   # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '13428a18-fbae-4122-8ecd-29957430b165'
-  imageRepository: 'devwerkstuk'
-  containerRegistry: 'werkstukregistry.azurecr.io'
+  dockerRegistryServiceConnection: 'aa016072-3763-4386-88a1-57370970590c'
+  imageRepository: 'testingmayes'
+  containerRegistry: 'devcontain.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/api/Dockerfile'
   tag: '$(Build.BuildId)'
 
